'borrowed' this branch to modify CheckOut
uncommented a method in GuestCOntroller, 
changed a variable in RoomController to public